--- a/views/msettings.jade
+++ b/views/msettings.jade
@@ -56,9 +56,6 @@ head
       btn {
         font-family:roboto-thin;
       }
-      #showLeft:hover {
-       color:white !important;
-      }
       .cbp-spmenu {
         background: #1d1d1d;
         position: fixed;
@@ -218,7 +215,7 @@ head
                 .highlight
                   pre
                     code(class='language-bash') http://peopleandbooks.com/lists/#{uid}
-    button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
+    button(type='button' id='showLeft' style='color:gray;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
       span(class='glyphicon glyphicon-align-justify ')          
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(async src='/js/bootstrap.min.js')
