--- a/views/mpeople.jade
+++ b/views/mpeople.jade
@@ -57,9 +57,6 @@ head
       btn {
         font-family:roboto-thin;
       }
-      #showLeft:hover {
-       color:white !important;
-      }
       .cbp-spmenu {
         background: #1d1d1d;
         position: fixed;
@@ -186,7 +183,7 @@ head
           h3 People
       .row
         .col-xs-12(id='inserts')
-    button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
+    button(type='button' id='showLeft' style='color:gray;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
       span(class='glyphicon glyphicon-align-justify ')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(async src='/js/bootstrap.min.js')
