--- a/views/mpeople.jade
+++ b/views/mpeople.jade
@@ -177,7 +177,7 @@ head
       a(href="/settings") Настройки
       a(href='/about') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
-    .container  
+    .container(style='min-height:100vh;background-color:#ddd;') 
       .row
         .col-xs-12
           h3 People
