--- a/views/msettings.jade
+++ b/views/msettings.jade
@@ -161,7 +161,7 @@ head
       a(class='activemenuitem') Настройки
       a(href='/about') О проекте
       a(href="/logout") Выйти
-    .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;height:100%;')  
+    .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;min-height:100vh;background-color:#ddd;')  
       .row
         .col-xs-12
           h3(style='color:#004C5E;') Your email:
