--- a/views/msettings.jade
+++ b/views/msettings.jade
@@ -178,8 +178,8 @@ head
       .row(style='padding-top:20px;padding-bottom:20px;')
         .col-xs-12
           .btn-group(role="group" aria-label="...")
-            button(type="button" id='private' onclick='pubchange(0)' class="btn btn-warning") Private
-            button(type="button" id='public' onclick='pubchange(1)' class="btn btn-warning") Public
+            button(type="button" id='private' onclick='pubchange(0)' class="btn btn-warning btn-lg") Private
+            button(type="button" id='public' onclick='pubchange(1)' class="btn btn-warning btn-lg") Public
       .row.drkrw
         .col-xs-12
           h3 Color themes:
@@ -209,7 +209,7 @@ head
             label
               input(type="checkbox" id='fifth' ) 
               span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#2e83b0;')
-          button(class='btn btn-default' id='changecolor' type='button') Change color
+          button(class='btn btn-default btn-lg' id='changecolor' type='button') Change color
       #pageoutlink(style='display:none;')
         .row.drkrw
           .col-xs-12
