--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -182,6 +182,17 @@ head
          background-color:transparent;
         }
       }
+      @media screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) {
+        #showLeft{
+         color:white;
+         font-size:30px;
+         position:absolute;
+         bottom:15px;
+         right:-20px;
+         border:0px;
+         background-color:transparent;
+        }
+      }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
