--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -171,6 +171,11 @@ head
          border:0px;
          background-color:transparent;
         }
+        #provoutah{
+         text-align:center;
+         margin-top:15vh;
+         margin-bottom:10vh;
+        }
       @media screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
         #showLeft{
          color:white;
@@ -183,6 +188,11 @@ head
         }
       }
       @media screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) {
+        #provoutah{
+         text-align:center;
+         margin-top:5vh;
+         margin-bottom:5vh;
+        }
         #showLeft{
          color:white;
          font-size:30px;
@@ -199,7 +209,7 @@ head
       a(href='http://m.peopleandbooks.com/about') О проекте
     .bckgrnd
     .container
-      .row(style='text-align:center;margin-top:15%;margin-bottom:10vh;')
+      .row(id='provoutah')
         .col-xs-12
           h1(style='font-size:50px;') Organise your reading. 
           h3 Never forget a book.
