--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -177,6 +177,11 @@ head
          margin-bottom:10vh;
         }
       @media screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
+        #provoutah{
+         text-align:center;
+         margin-top:5vh;
+         margin-bottom:5vh;
+        }
         #showLeft{
          color:white;
          font-size:30px;
@@ -208,7 +213,7 @@ head
       img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
       a(href='http://m.peopleandbooks.com/about') О проекте
     .bckgrnd
-    .container
+    .container(style='width:100%;')
       .row(id='provoutah')
         .col-xs-12
           h1(style='font-size:50px;') Organise your reading. 
