--- a/views/msettings.jade
+++ b/views/msettings.jade
@@ -164,7 +164,7 @@ head
       a(href="/people") Списки друзей
       a(class='activemenuitem') Настройки
       a(href='/about') О проекте
-      a(href="/logout") Выйти
+      a(href="http://peopleandbooks.com/logout") Выйти
     .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;min-height:100vh;background-color:#ddd;')  
       .row.drkrw
         .col-xs-12
