--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -185,7 +185,7 @@ head
         #showLeft{
          color:white;
          font-size:30px;
-         position:absolute;
+         position:fixed;
          bottom:15px;
          right:5px;
          border:0px;
@@ -201,7 +201,7 @@ head
         #showLeft{
          color:white;
          font-size:30px;
-         position:absolute;
+         position:fixed;
          bottom:15px;
          right:5px;
          border:0px;
