--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -22,6 +22,7 @@ head
       }
       body {
         font-family:roboto-thin;
+        width:100%;
       }
       h1 {
         font-family:roboto-thin;
@@ -185,7 +186,7 @@ head
         #showLeft{
          color:white;
          font-size:30px;
-         position:fixed;
+         position:absolute;
          bottom:15px;
          right:5px;
          border:0px;
@@ -201,7 +202,7 @@ head
         #showLeft{
          color:white;
          font-size:30px;
-         position:fixed;
+         position:absolute;
          bottom:15px;
          right:5px;
          border:0px;
