--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -163,7 +163,7 @@ head
       .navbar-right {
         float: none !important; 
       }
-      #showLeft{
+      #showleft{
          color:white;
          font-size:30px;
          position:absolute;
@@ -172,6 +172,13 @@ head
          border:0px;
          background-color:transparent;
         }
+      #showLeft{
+       position: fixed;
+       bottom: 20px;
+       right: 5%;
+       width: 44px;
+       height: 44px;
+      }
         #provoutah{
          text-align:center;
          margin-top:15vh;
@@ -183,7 +190,7 @@ head
          margin-top:5vh;
          margin-bottom:5vh;
         }
-        #showLeft{
+        #showleft{
          color:white;
          font-size:30px;
          position:absolute;
@@ -199,7 +206,7 @@ head
          margin-top:5vh;
          margin-bottom:5vh;
         }
-        #showLeft{
+        #showleft{
          color:white;
          font-size:30px;
          position:absolute;
