--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -174,10 +174,9 @@ head
         }
       #showLeft{
        position: fixed;
-       bottom: 20px;
-       right: 5%;
-       width: 44px;
-       height: 44px;
+       bottom: 15px;
+       right: 20%;
+       font-size:30px;
       }
         #provoutah{
          text-align:center;
