--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -176,6 +176,8 @@ head
        position: fixed;
        bottom: 15px;
        right: 10%;
+       width: 44px;
+       height: 44px;
       }
         #provoutah{
          text-align:center;
