--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -235,7 +235,7 @@ head
           input(class='form-control' type='password' style='display:none;font-size:20px;height:auto;' id='pc' name='pc' placeholder='confirmatioin')
           #wrap(style='width:100%;margin-top:20px;')
             button(class='btn btn-primary' type='button' id='shownav' style='font-size:20px;position:absolute;margin-left:-80;left:50%;z-index:2;border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
-            nav(id='nav' style='z-index:1;display:none;')
+            nav(id='nav' style='z-index:1;display:none;margin-bottom:10vh;')
               ul(class="pager")
                 li(class='previous')
                   a( id='login' style='font-size:20px;border-radius:30px;') Войти
