--- a/views/index.jade
+++ b/views/index.jade
@@ -214,7 +214,7 @@ head
     .container(style='padding-left:84px;z-index:2;')  
       .row(style='text-align:center;margin-top:15%;margin-bottom:20px;')
         .col-xs-12
-          h1(style='font-size:50px;') Organise your reading. 
+          h1(style='font-size:50px;') Organize your reading. 
           h3 Never forget a book.
       .row
         #message.col-xs-12
