--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -224,7 +224,7 @@ head
     .container(style='width:100%;')
       .row(id='provoutah')
         .col-xs-12
-          h1(style='font-size:50px;') Organise your reading. 
+          h1(style='font-size:50px;') Organize your reading. 
           h3 Never forget a book.
       .row
         #message.col-xs-12
