--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -163,16 +163,19 @@ head
       .navbar-right {
         float: none !important; 
       }
-      #showleft{
+      #showLeft{
          color:white;
          font-size:30px;
          position:absolute;
          bottom:15px;
-         right:15px;
+         margin-left: auto;
+         margin-right: auto;
+         left: 0;
+         right: 0;
          border:0px;
          background-color:transparent;
         }
-      #showLeft{
+      #showleft{
        position: fixed;
        bottom: 15px;
        right: 75%;
