--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -92,7 +92,6 @@ head
       }
       .cbp-spmenu {
         background: #1d1d1d;
-        position: fixed;
       }
       
       .cbp-spmenu h3 {
@@ -182,7 +181,7 @@ head
          border:0px;
          background-color:transparent;
         }
-      .cbp-menu-bottom{
+      .cbp-spmenu-bottom{
        bottom: -150px;
       }
       .cbp-spmenu-bottom.cbp-spmenu-open {
