--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -226,10 +226,8 @@ head
           });
         $('#login').click(authsubmit);
       var counter =0;
-        var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
-            menuRight = document.getElementById( 'cbp-spmenu-s2' ),
+        var menuBottom = document.getElementById( 'cbp-spmenu-s1' ),
             showBottom = document.getElementById( 'showBottom' ),
-            showRight = document.getElementById( 'showRight' ),
             body = document.body;
         
         showBottom.onclick = function() {
