--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -231,16 +231,15 @@ head
             body = document.body;
         
         showBottom.onclick = function() {
+          console.log('hey');
           switch(counter)
             {case(1):
                          counter=0;
-                         $('#showBottom').removeClass('active' );
                          $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
                          $('.container').css('-webkit-filter','brightness(1)');
                         break;
                         case(0):
                           counter=1;
-                          $('#showBottom').addClass('active' );
                           $('#cbp-spmenu-s1').addClass('cbp-spmenu-open' );
                           $('.container').css('-webkit-filter','brightness(0.6)');
                         break;
