--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -164,6 +164,7 @@ head
          left: 0;
          right: 0;
          border:0px;
+         z-index:10000;
          background-color:transparent;
         }
       .cbp-spmenu-bottom {
