--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -217,7 +217,7 @@ head
             body = document.body;
         
         //showBottom.onclick = 
-        $('#showBottom').click(console.log('funck'););
+        $('#showBottom').click(function(){console.log('funck');});
         function fooley() {
           console.log('hey');
           switch(counter)
