--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -159,10 +159,9 @@ head
          font-size:30px;
          position:absolute;
          bottom:15px;
-         margin-left: auto;
-         margin-right: auto;
          left: 0;
-         right: 0;
+          right: 0;
+          margin: 0 auto;
          border:0px;
          z-index:10000;
          background-color:transparent;
