--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -159,9 +159,7 @@ head
          font-size:30px;
          position:absolute;
          bottom:15px;
-         left: 0;
-          right: 0;
-          margin: 0 auto;
+         left: 15px;
          border:0px;
          background-color:transparent;
         }
@@ -199,8 +197,10 @@ head
                   a( id='login' style='font-size:20px;border-radius:30px;') Войти
                 li(class='next')
                   a(id='regbutton' style='font-size:20px;border-radius:30px;') Регистрация
-    button(type='button' id='showBottom') 
-      span(class='glyphicon glyphicon-align-justify ')
+      .row
+        .col-xs-12
+          button(type='button' id='showBottom') 
+            span(class='glyphicon glyphicon-align-justify ')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
