--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -197,7 +197,7 @@ head
                   a( id='login' style='font-size:20px;border-radius:30px;') Войти
                 li(class='next')
                   a(id='regbutton' style='font-size:20px;border-radius:30px;') Регистрация
-      .row
+      .row(style='position:absolute;bottom:0px;')
         .col-xs-12
           button(type='button' id='showBottom') 
             span(class='glyphicon glyphicon-align-justify ')
