--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -204,7 +204,7 @@ head
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
-      $('#showBottom').click(people);
+      $('#showBottom').click(fooley);
       $('#shownav').click(function(){
           $('#shownav').fadeOut();
           $('#nav').fadeIn();
@@ -216,9 +216,6 @@ head
             body = document.body;
         
         //showBottom.onclick = 
-        function people() {
-          console.log('jesus man!');
-        }
         function fooley() {
           console.log('hey');
           switch(counter)
