--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -166,7 +166,7 @@ head
       .cbp-spmenu-bottom {
         bottom: -150px;
       }
-      .cbp-spmenu-left.cbp-spmenu-open {
+      .cbp-spmenu-bottom.cbp-spmenu-open {
         bottom: 0px;
       }
       
