--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -121,13 +121,6 @@ head
         color: #47a3da;
       }
       .cbp-spmenu-vertical {
-        width: 100%;
-        border-left:1px solid #333;
-        height: 80%;
-        top: 0;
-        z-index: 1000;
-      }
-      .old-cbp-spmenu-vertical {
         width: 240px;
         margin-left:74px;
         border-left:1px solid #333;
@@ -180,57 +173,10 @@ head
          font-size:30px;
          position:absolute;
          bottom:15px;
-         margin-left: auto;
-         margin-right: auto;
-         left: 0;
-         right: 0;
+         left: 15px;
          border:0px;
          background-color:transparent;
         }
-      #showleft{
-       position: fixed;
-       bottom: 15px;
-       right: 75%;
-       width: 44px;
-       height: 44px;
-      }
-        #provoutah{
-         text-align:center;
-         margin-top:15vh;
-         margin-bottom:10vh;
-        }
-      @media screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
-        #provoutah{
-         text-align:center;
-         margin-top:5vh;
-         margin-bottom:5vh;
-        }
-        #showleft{
-         color:white;
-         font-size:30px;
-         position:absolute;
-         bottom:15px;
-         right:5px;
-         border:0px;
-         background-color:transparent;
-        }
-      }
-      @media screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) {
-        #provoutah{
-         text-align:center;
-         margin-top:5vh;
-         margin-bottom:5vh;
-        }
-        #showleft{
-         color:white;
-         font-size:30px;
-         position:absolute;
-         bottom:15px;
-         right:5px;
-         border:0px;
-         background-color:transparent;
-        }
-      }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
