--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -175,7 +175,7 @@ head
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
       a(href='http://m.peopleandbooks.com/about') О проекте
-      button(type='button' id='showLeft') 
+      button(type='button' class='showLeft') 
         span(class='glyphicon glyphicon-align-justify ')
     .bckgrnd
     .container(style='width:100%;')
@@ -200,7 +200,7 @@ head
                   a(id='regbutton' style='font-size:20px;border-radius:30px;') Регистрация
       .row(style='position:absolute;bottom:0px;')
         .col-xs-12
-          button(type='button' id='showLeft') 
+          button(type='button' class='showLeft') 
             span(class='glyphicon glyphicon-align-justify ')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
@@ -213,7 +213,7 @@ head
       var counter =0;
         var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
             menuRight = document.getElementById( 'cbp-spmenu-s2' ),
-            showLeft = document.getElementById( 'showLeft' ),
+            showLeft = document.getElementByClassName( 'showLeft' ),
             showRight = document.getElementById( 'showRight' ),
             body = document.body;
         
