--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -167,7 +167,7 @@ head
          font-size:30px;
          position:absolute;
          bottom:15px;
-         left: 15px;
+         right: 15px;
          border:0px;
          background-color:transparent;
         }
