--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -164,9 +164,8 @@ head
       }
       #showLeft{
          color:white;
-         position:absolute;
-         bottom:15px;
-         right: 15px;
+         margin-bottom:15px;
+         margin-right: 15px;
          border:0px;
          background-color:transparent;
         }
@@ -197,7 +196,7 @@ head
                   a( id='login' style='font-size:20px;border-radius:30px;') Войти
                 li(class='next')
                   a(id='regbutton' style='font-size:20px;border-radius:30px;') Регистрация
-      .row(style='position:absolute;bottom:0px;margin:0px;')
+      .row(style='position:absolute;bottom:0px;margin:0px;text-align:right;')
         .col-xs-12
           button(type='button' id='showLeft') 
             span(class='glyphicon glyphicon-align-justify ')
