--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -180,7 +180,7 @@ head
       //button(type='button' id='showLeft') 
         //span(class='glyphicon glyphicon-align-justify ')
     .bckgrnd
-    .container(style='width:100%;padding-left:0px;pading-right:0px;')
+    .container(style='width:100%;padding-left:0px;padding-right:0px;')
       .row.padding15(id='provoutah')
         .col-xs-12
           h1(style='font-size:50px;') Organize your reading. 
