--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -173,6 +173,9 @@ head
         padding-left:15px;
         padding-right:15px;
       }
+      .row{
+        margin:0px;
+      }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
@@ -200,7 +203,7 @@ head
                   a( id='login' style='font-size:20px;border-radius:30px;') Войти
                 li(class='next')
                   a(id='regbutton' style='font-size:20px;border-radius:30px;') Регистрация
-      .row(style='position:absolute;bottom:0px;margin:0px;text-align:right;')
+      .row(style='position:absolute;bottom:0px;margin:0px;text-align:right;width:100%;')
         .col-xs-12
           button(type='button' id='showLeft') 
             span(class='glyphicon glyphicon-align-justify ')
