--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -203,7 +203,7 @@ head
                   a( id='login' style='font-size:20px;border-radius:30px;') Войти
                 li(class='next')
                   a(id='regbutton' style='font-size:20px;border-radius:30px;') Регистрация
-      .row(style='margin-top:100vh;text-align:right;width:100%;')
+      .row(style='margin-top:100vh;text-align:right;width:100%;position:absolute;bottom:15px;')
         .col-xs-12
           button(type='button' id='showLeft') 
             span(class='glyphicon glyphicon-align-justify ')
